added set / delete operations for members' memberships
